Prevent date worked from wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ section {
   margin-bottom: 0px;
   margin-top: 0px;
   text-align: right;
+  white-space: nowrap;
 }
 
 .resume .resume-reference {
